# 3DRenderer

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  Makefile  README.md  camera.cpp  camera.hpp  main.cpp  mesh.cpp  mesh.hpp  scene.cpp  scene.hpp  utils.cpp  utils.hpp
include/: camera.hpp  exporter.hpp  exporter.tpp  light.hpp  mesh.hpp  scene.hpp  sceneObject.hpp  triangle.hpp  utils.hpp
include/Structures/: box.hpp  octree.hpp  octree.tpp  plane.hpp  ray.hpp  render.hpp
src/: camera.cpp  camera.hpp  display.cpp  display.hpp  exporter.hpp  exporter.tpp  light.cpp  main.cpp  mesh.cpp  mesh.hpp  scene.cpp  scene.hpp  sceneObject.cpp  sceneObject.hpp  triangle.cpp  utils.cpp  utils.hpp
src/Structures/: box.cpp
tests/include/: octree-test.hpp  plane-test.hpp
tests/src/: main.cpp  octree-test.cpp  plane-test.cpp
